// $Id: CHANGELOG.txt,v 1.265 2008/05/06 15:39:36 dries Exp $

Drupal 7.0, xxxx-xx-xx (development version)
----------------------
- Security:
    * Protected cron.php -- cron will only run if the proper key is provided.
    * Changed to much stronger password hashes that are also compatible with the
      Portable PHP password hashing framework.
    * Implemented a pluggable password hashing API that supports alternative
      hashing and authentication schemes.
- Usability:
    * Implemented drag-and-drop positioning for input format listings.
    * Provided descriptions for user permissions.
- Search:
    * Added support for language-aware searches.
- Testing:
    * Added test framework and tests.
- Removed ping module:
    * Contributed modules with similar functionality are available.
- Refactored the "access rules" component of user module:
    * The user module now provides a simple interface for blocking single
      IP addresses. Previous user module functionality for restricting certain
      e-mail addresses and usernames are available as a contributed module.
      Further, IP address range blocking is no longer supported and should be
      implemented at the operating system level.
- Removed throttle module:
    * Alternative methods for improving performance are available in other core and
      contributed modules.
- Added code registry:
    * Modules now declare their includable files via their .info file.  That
      allows Drupal to scan files when a module is enabled and then lazy-load
      code as needed, resulting in significant performance and memory improvements.

Drupal 6.0, 2008-02-13
----------------------
- New, faster and better menu system.
- New watchdog as a hook functionality.
   * New hook_watchdog that can be implemented by any module to route log
     messages to various destinations.
   * Expands the severity levels from 3 (Error, Warning, Notice) to the 8
     levels defined in RFC 3164.