@@ -1,6 +1,6 @@
-; $Id: bluemarine.info,v 1.5 2008/02/18 19:19:48 dries Exp $
+; $Id: bluemarine.info,v 1.6 2008/05/07 07:05:56 dries Exp $
 name = Bluemarine
-description = Table-based multi-column theme with a marine and ash color scheme.
+description = Tableless theme with a marine and ash color scheme.
 version = VERSION
 core = 7.x
 engine = phptemplate
