@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.265 2008/05/06 15:39:36 dries Exp $
+// $Id: CHANGELOG.txt,v 1.266 2008/05/07 07:05:55 dries Exp $
 
 Drupal 7.0, xxxx-xx-xx (development version)
 ----------------------
@@ -30,6 +30,8 @@ Drupal 7.0, xxxx-xx-xx (development version)
     * Modules now declare their includable files via their .info file.  That
       allows Drupal to scan files when a module is enabled and then lazy-load
       code as needed, resulting in significant performance and memory improvements.
+- Theme system:
+    * Converted the 'bluemarine' theme to a tableless layout.
 
 Drupal 6.0, 2008-02-13
 ----------------------
